[project]
name = "py_gearworks"
dynamic = ["version"]
description = "A gear geometry generator in Python"
authors = [
{ name = "Gergely Bencsik", email = "bencsik.gergely.1@gmail.com"},
]
readme="README.md"
requires-python = ">=3.10"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: Apache-2.0",
"Operating System :: OS Independent",
]
keywords = ["gears", "CAD", "python"]

dependencies = [
    "build123d >= 0.9.1",
    "numpy >= 2, < 3",
    "ocp-vscode>=3.4.0",
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "scipy >= 1.10.1",
]


[project_urls]
Homepage = "https://github.com/GarryBGoode/py_gearworks"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "shapely",
    "matplotlib",
    "flake8",
]

ocp_vscode = [
    "ocp_vscode",
]

extras = [
    "matplotlib",
    "pyqt6",
    "PyQt6-WebEngine",
]

all = [
    "py_gearworks[dev]",
    "py_gearworks[ocp_vscode]",
    "py_gearworks[extras]",
]

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["py_gearworks"]
package-dir = {"" = "src"}

[tool.setuptools_scm]
write_to = "src/py_gearworks/_version.py"

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules"
testpaths = ["tests"]
pythonpath = "src"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
lint.select = ["E", "F", "W", "B"]
lint.ignore = ["F403", "F405"]
